--- a/package.json
+++ b/package.json
@@ -14,23 +14,29 @@
     "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.22.0",
-    "better-sqlite3": "^11.10.0",
-    "ink": "^5.0.1",
-    "ink-text-input": "^5.0.1",
-    "openai": "^4.76.0",
-    "react": "^18.3.1"
+    "@byteland/ink-scroll-bar": "^0.1.1",
+    "@google/generative-ai": "^0.24.1",
+    "better-sqlite3": "^12.5.0",
+    "ink": "^6.6.0",
+    "ink-scroll-view": "^0.3.5",
+    "ink-spinner": "^5.0.0",
+    "ink-text-input": "^6.0.0",
+    "openai": "^6.15.0",
+    "react": "^19.2.3",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.12",
-    "@types/node": "^22.13.1",
-    "@types/react": "^18.3.12",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.0",
-    "tsup": "^8.4.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "vitest": "^2.1.8"
+    "@eslint/js": "^9.39.2",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "eslint": "^9.39.2",
+    "tsup": "^8.5.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.52.0",
+    "vitest": "^4.0.16"
   }
 }
